@@ -1,10 +1,12 @@
 AUX cachefilesd.conf 284 RMD160 34c1bc4cd9071a6c76f4fcd48f950b5cd6d36a77 SHA1 b85c6782c1fa7d268e6f357ac1751d2114b9ee18 SHA256 355f53fb6babbd3ba1e616c335ffaaab854a114ab63086c7bf6ef612f8baa447
 AUX cachefilesd.init 667 RMD160 f775ae36113b9f1075ac68e2e49deb6e9248451d SHA1 92696a964ff4655463956e7f7072c5a5f266a553 SHA256 dfe3352e0fff9765e6857c386732e28cecc24570a586bfeac8d261cb0b115ac0
 AUX cachefilesd.init-r1 1526 RMD160 a5bc853d6822e0f573beed83125e5d6e3d9650ad SHA1 f3fd1ec8cec05715f608e946781365f6bb787a8b SHA256 9552d299b0506d1ac763f1a62a76b597d72218ecaa6066ba96701e77395ae861
+DIST cachefilesd-0.10.1.tar.bz2 23763 RMD160 293fe9aef77d296dde95af2939a13d62356a0ceb SHA1 73fc9424c485cc4b724c1f11764d7616cddebc5e SHA256 8964ec1ff571025db74b89385486299173cd2b6ed6944f92db95bf09871a43d5
 DIST cachefilesd-0.10.tar.bz2 24196 RMD160 4527c798deaa9a377bbff85b040b543629a280a7 SHA1 b23b2b8e8ed3d1d7a1e400bcfc41924b9c5caed7 SHA256 ec1c2311aeeeb9246549d7efdc6ad464d3eda768d1883a22ecf40c2ea2354fd7
 DIST cachefilesd-0.9.tar.bz2 20155 RMD160 e23fcd4c337819351f99bdc9ba524e34904503da SHA1 56d89b6415e0290888aa095866cf7c3f01a4665d SHA256 9996c3e624e0d022fc42e5013396d6fa300b47e60f94c0cc08038f0df2f33447
 EBUILD cachefilesd-0.10-r1.ebuild 1194 RMD160 b2783d86b2ae659869feda8bfbe9bcb341b1f979 SHA1 04a1e0d385991e38e3f31134e71812a1fee84cb9 SHA256 acede1397f1fce5b3a680b4476cff3866dfc5702cae24ceac4b717f0764732e6
+EBUILD cachefilesd-0.10.1.ebuild 1194 RMD160 b2783d86b2ae659869feda8bfbe9bcb341b1f979 SHA1 04a1e0d385991e38e3f31134e71812a1fee84cb9 SHA256 acede1397f1fce5b3a680b4476cff3866dfc5702cae24ceac4b717f0764732e6
 EBUILD cachefilesd-0.10.ebuild 1201 RMD160 11883e49d346558d31c10cdb8433f645a0223545 SHA1 5b7265c0012de0035cb8279411e6e30a7792da30 SHA256 b49e97703b9a17fb91821eb9f79f9cf1a099ac4220215a53bdd6c8f30e904b35
 EBUILD cachefilesd-0.9-r1.ebuild 1128 RMD160 7fade54818da7738923d8091e5294c33a8e6e54b SHA1 b4ad8ac304ebefaf018e791897c45cfcf9fbc0cf SHA256 a89d4578c3bf57f2875e98432f8f853ed0c86433109e265c8cf5282d898b099a
-MISC ChangeLog 854 RMD160 563dad50773e11958a1962e0d591c506343b7b0c SHA1 adf266e56c031aa69f58dbc995b34a9c455f7ef2 SHA256 68b3caecfded421aca44df61fb72360e73b1bd02c45155e5676cc5b84eaed2a1
+MISC ChangeLog 982 RMD160 234f8204a6bf62089b3e049ef7f3607095b71163 SHA1 c441064d09d3f248af877387bbf9aed726f6d10d SHA256 0099d4d9464a2a4673778b302cb55b7c0093026d641681ee9df1506ca753bbea
 MISC metadata.xml 383 RMD160 5413cc4dddf46b69003cbeea899245773180df63 SHA1 76be9a971d71d7895c3aead4eaff1bcc3b96ec5e SHA256 62f6e6c67dd187f09ac23a549d3914db97a8c2bd93f149dfcf31bd14cbcf305d
