@@ -2,6 +2,12 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*cachefilesd-0.10.1 ( 09 Jun 2010 )
+
+  09 Jun 2010; A. Vinogradov <spamslepnoga@inbox.ru>
+  +cachefilesd-0.10.1.ebuild:
+  bump
+
   28 Apr 2010; A. Vinogradov <spamslepnoga@inbox.ru>
   cachefilesd-0.10-r1.ebuild:
   fix cache storage dir's
